<resources>
    <string name="app_name">unobridge</string>
    <string name="app_name_subtitle">You Be Ahead</string>
    <string name="idol_cabs">Idol Cabs</string>
    <string name="fake_number">9999999999</string>
    <string name="txt_service">Service</string>
    <string name="txt_description">Description</string>
    <string name="txt_customer_details">Customer Details</string>
    <string name="txt_service_details">Service Details</string>
    <string name="raju_electrician_website">https://unob.co/rajuelectrician/</string>
    <string name="txt_job_order_no">Job Order No. </string>
    <string name="txt_customer_name">Customer Name</string>
    <string name="txt_customer_mobile">Customer Mobile No.</string>
    <string name="txt_customer_address">Customer Address</string>
    <string name="txt_estimated_cost">Estimated Cost</string>
    <string name="txt_offer_text">Offer Text</string>
    <string name="txt_start_date">Start Date</string>
    <string name="txt_service_date">Service Date</string>
    <string name="txt_end_date">End Date</string>
    <string name="txt_service_time">Service Time</string>
    <string name="app_description">We will help you\n to get cabs</string>
    <string name="sign_in_with_mobile">Sign in with Mobile</string>
    <string name="verification">Verification</string>
    <string name="enter_otp_msg">"Enter the Otp sent to "</string>
    <string name="didn_t_recieve_otp_yet_resend">Didn\'t receive OTP yet? </string>
    <string name="phone_number">Enter Mobile Number</string>
    <string name="mobile_number">Mobile No.</string>
    <string name="resend">RESEND</string>
    <string name="otp_was_successfully_resent">OTP was successfully resent</string>
    <string name="Continue">Continue</string>
    <string name="enter_phone_number">Enter Mobile Number</string>
    <string name="value_your_privacy">We value your privacy. Your number will not be shared with anyone else.</string>
    <string name="t_n_c_and_privacy_policy">If you agree to Terms &amp; Conditions and the Privacy Policy, Click on the continue button.</string>
    <string name="terms_amp_conditions">terms_amp_conditions</string>
    <string name="privacy_policy">privacy_policy</string>
    <string name="verify_phone_number">Verify Mobile number</string>
    <string name="otp_sent">Otp Sent</string>
    <string name="_00_00">00:00</string>
    <string name="resend_the_code"><u>Resend the Code</u></string>
    <string name="enter_personal_details">Personal Details</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="you_are">You are</string>
    <string name="driver">Driver</string>
    <string name="agent">Agent</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter email</string>
    <string name="profile_image">Profile Image</string>
    <string name="aadhar_images">Aaadhar Images</string>
    <string name="identification_details">Identification Details</string>
    <string name="aadhar_details">Aaadhar Details</string>
    <string name="vehicle_details">Driver Details</string>
    <string name="aadhar_no">Aaadhar Number</string>
    <string name="front">Front</string>
    <string name="back">Back</string>
    <string name="rc_images">RC Images</string>
    <string name="rc_no">RC Number</string>
    <string name="driver_name">Driver Name</string>
    <string name="drivinglicenseImages">Driving License Images</string>
    <string name="user_type">User Type</string>
    <string name="search">Search State</string>
    <string name="all_states">All States Rides</string>
    <string name="states">State Wise Ride</string>
    <string name="see_latest_and_amazing_rides_in_one_place">See Latest and Amazing \nRides in one place</string>
    <string name="dummy_long_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="admin">Admin</string>
    <string name="state_name">state_name</string>
    <string name="username">Username, Agent</string>
    <string name="dummymail">dummy@gmail.com</string>
    <string name="terms_of_service">Terms Of Service</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Log out</string>
    <string name="delete_account">Delete Account</string>
    <string name="add_ride">Add Ride</string>
    <string name="trip_type">Trip Type</string>
    <string name="destination_city">Destination City</string>
    <string name="pickup_city">Pickup City</string>
    <string name="contact_no">Contact No</string>
    <string name="pickup_date_time">Pickup Date</string>
    <string name="destination_date_time">Destination Date</string>
    <string name="company_name">Company Name</string>
    <string name="mobile_validation_empty">Please enter Mobile Number</string>
    <string name="mobile_validation_digit">Please enter valid mobile number</string>
    <string name="verification_id">verification_id</string>
    <string name="resend_token">resend_token</string>
    <string name="valid_otp_msg">Please enter valid OTP</string>
    <string name="country_code">country_code</string>
    <string name="new_channel_name">cabs_channel</string>
    <string name="new_channel_description">cabs_channel_description</string>
    <string name="channel_id">channle_id_cabs</string>
    <string name="default_notification_channel_id">cabs_default</string>
    <string name="id">id</string>
    <string name="profile_params">profile_params</string>
    <string name="add_image">Add Image</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="request_code">request_code</string>
    <string name="image_pick_mode">image_pick_mode</string>
    <string name="mode">mode</string>
    <string name="profile_pic_error">Please select profile pic.</string>
    <string name="name_empty_error">Please enter name.</string>
    <string name="email_empty_error">Please enter email address.</string>
    <string name="email_valid_error">Please enter valid email address.</string>
    <string name="license_no">Driving License Number</string>
    <string name="license_image_front_pic_error">Please upload license front image.</string>
    <string name="license_image_back_pic_error">Please upload license back image.</string>
    <string name="driver_name_empty_error">Please enter driver name.</string>
    <string name="license_no_empty_error">Please enter driving license no.</string>
    <string name="license_no_valid_error">Please enter valid driving license number.</string>
    <string name="aadhar_image_front_pic_error">Please upload aadhar front image.</string>
    <string name="aadhar_image_back_pic_error">Please upload aadhar back image</string>
    <string name="aadhar_no_empty_error">Please enter aadhar number.</string>
    <string name="aadhar_no_valid_error">Please enter valid aadhar number.</string>
    <string name="razor_pay_key" />
    <string name="txt_don_t_bother_about_shake_limits_anymore">Get unlimited rides o daily basis</string>
    <string name="txt_the_ice_breaker">IIce breaker</string>
    <string name="txt_1_month_starter_pack">I month starter Pack</string>
    <string name="txt_dollar_sign">$</string>
    <string name="txt_20">20</string>
    <string name="subsription_text">A simple start for everyone</string>
    <string name="get_daily_rides_from_all_states">Get daily rides from all states</string>
    <string name="subscribe">Subscribe</string>
    <string name="get_realtime_alerts_for_all_rides_in_whole_time">Get Realtime alerts for all rides</string>
    <string name="start_now">Start Now!</string>
    <string name="next">Next</string>
    <string name="sites">Sites</string>
    <string name="content">Content</string>
    <string name="customers">Customers</string>
    <string name="orders">Orders</string>
    <string name="employees">Employees</string>
    <string name="regulartory">Regulatory</string>
    <string name="store">Store</string>
    <string name="money">Money</string>
    <string name="promotoin">promotoin</string>
    <string name="jobs">jobs</string>
    <string name="rights_reserved">©Unobridge2021 All rights are reserved.</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_a_member">Already a member?</string>
    <string name="log_in">Log In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_up_in_3_steps">Set up in 3 Steps</string>
    <string name="set_up_complete">Set up Complete</string>
    <string name="update_website">Update Website</string>
    <string name="your_website_is_ready">Your website is ready!</string>
    <string name="in_last_30_days">In last 30 days</string>
    <string name="preview_website">Preview Website</string>
    <string name="add_job_opening">Add Job Opening</string>
    <string name="add_on_website">Add on Website</string>
    <string name="add_offer">Add Offer</string>
    <string name="add_another_service">Add Another Service</string>
    <string name="save_changes">Save Changes</string>
    <string name="share_details">Share Details</string>
    <string name="share_via_whatsapp">Share via Whatsapp</string>
    <string name="key_updated_dashboard">updated_dashboard</string>
    <string name="employee_details">Employee Details</string>
    <string name="txt_salary">Salary</string>
    <string name="txt_contract_type">Contract Type</string>
    <string name="txt_payment_date">Payment Date</string>
    <string name="txt_done">Done</string>


</resources>