<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="clickHandler"
            type="com.provider.unobridge.ui.fragments.auth.LoginFragment.ClickHandler" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg_new"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:splitMotionEvents="false">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.6"
            android:background="@color/black" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/luckiest_regular"
            android:letterSpacing="0.15"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/sp50"
            app:layout_constraintBottom_toTopOf="@id/glTop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp30"
            android:fontFamily="@font/fredoka"
            android:text="@string/app_description"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/sp26"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <carbon.widget.Button
            android:id="@+id/btFb"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size_login"
            android:layout_marginHorizontal="@dimen/margin_30"
            android:layout_marginBottom="@dimen/margin_30"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/averta_bold"
            android:text="@string/sign_in_with_mobile"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="@{()->clickHandler.getStarted()}"
            app:carbon_cornerRadius="@dimen/dp15"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        </carbon.widget.Button>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
